# ResumeBuilder

./: .gitignore  LICENSE  README.md  benchmark.ts  keep-alive.ts  package.json  tsconfig.json
.github/workflows/: benchmark.yml  ci-cd.yml
.stitch/: config.json
launchpad-backend/: .dockerignore  Cargo.toml  Dockerfile
launchpad-backend/src/: ai.rs  auth.rs  db.rs  email.rs  main.rs  metrics.rs  models.rs  resume.rs  waitlist.rs
launchpad-frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
launchpad-frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
launchpad-frontend/app/api/health/: route.ts
launchpad-frontend/app/auth/callback/: page.tsx
launchpad-frontend/app/auth/reset/: page.tsx
launchpad-frontend/app/components/: CinematicLoader.tsx  CursorGlow.tsx  EditorPanel.module.css  EditorPanel.tsx  FloatingNav.tsx  LiquidArchiveButton.module.css  LiquidArchiveButton.tsx  LiquidIconButton.tsx  ParticleField.tsx  ScrollAnimations.tsx
launchpad-frontend/app/components/templates/: CreativeTemplate.tsx  MinimalTemplate.tsx  ModernTemplate.tsx  TemplateSelector.tsx  index.ts  types.ts
launchpad-frontend/app/context/: AuthContext.tsx
launchpad-frontend/app/dashboard/: page.module.css  page.tsx
launchpad-frontend/app/explore/: page.module.css  page.tsx
launchpad-frontend/app/lib/: api.ts
launchpad-frontend/app/privacy/: page.tsx
launchpad-frontend/app/terms/: page.tsx
launchpad-frontend/public/: manifest.json  preview-a.html  preview-b.html  preview-c.html
