[package]
name = "launchpad-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "launchpad-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
urlencoding = "2.1.3"
jsonwebtoken = "9"
bcrypt = "0.16"
