[package]
name = "launchpad-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "launchpad-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
urlencoding = "2.1.3"
jsonwebtoken = "10.3.0"
bcrypt = "0.19.0"
